# anagram_names

./: README.md  pyproject.toml
anagram_names/: __init__.py  core.py
